# Aco-JUCE-CMake-Template

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.template  CONTRIBUTING.md  LICENSE.md  NewProjectGuide.txt  README.md  init_project.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Dsp/: example_dsp.h
